welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: value lenght is not a member of Array[java.awt.Color]
  for( i<-0 to C.lenght-1 )
                 ^Array1:25: error: class Array takes type parameters
def write(C:Array) = {
            ^Array1:25: error: class Array takes type parameters
def write(C:Array) = {
            ^